--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,10 +1,10 @@
-<div class="scrollable">  
+<div class="scrollable">
   <div class="scrollable-content">
 
     <div class="list-group">
       <div class="list-group-item">
         <h1>Welcome<br/>
-        <small>This is a demo of Mobile Angular UI</small>
+        <small>This is a reference site for AA+ compliant markup for modern web applications</small>
         </h1>
       </div>
       <div class="list-group-item media">
@@ -12,46 +12,10 @@
           <i class="fa fa-gamepad feature-icon text-primary"></i>
         </div>
         <div class="media-body">
-            <h3 class="media-heading">Play around a little</h3>
+            <h3 class="media-heading"></h3>
             Open the sidebar and start testing features
         </div>
       </div>
-
-
-      <div class="list-group-item media">
-        <div class="pull-right">
-          <i class="fa fa-tachometer feature-icon  text-primary"></i>
-        </div>
-        <div class="media-body">
-            <h3 class="media-heading">Test responsiveness and speed</h3>
-            Scroll, tap, navigate, test that everything is smooth
-        </div>
-      </div>
-
-
-      <div class="list-group-item media">
-        <div class="pull-right">
-          <i class="fa fa-expand feature-icon  text-primary"></i>
-        </div>
-        <div class="media-body">
-            <h3 class="media-heading">Resize your browser</h3>
-            Stretch and squeeze your browser window to see both mobile and desktop versions.
-        </div>
-      </div>
-
-      <div class="list-group-item media">
-        <div class="pull-right">
-          <i class="fa fa-stethoscope feature-icon  text-primary"></i>
-        </div>
-        <div class="media-body">
-            <h3 class="media-heading">Submit an issue</h3>
-            Please submit any issue you'll find. It would help a lot!<br>
-            Just in case, don't forget to indicate your user agent string:<br>
-            {{userAgent}}
-        </div>
-      </div>
-
     </div>
-
   </div>
 </div>
