--- a/src/views/sidebar.html
+++ b/src/views/sidebar.html
@@ -1,4 +1,4 @@
-<h1 class="app-name">Mobile Angular UI</h1>
+<h1 class="app-name">Menu</h1>
 
 <div class="scrollable sidebar-scrollable">
   <div class="scrollable-content">
