--- a/src/views/sidebar.html
+++ b/src/views/sidebar.html
@@ -5,6 +5,7 @@
     <div class="list-group" toggle="off" bubble target="mainSidebar">
       <a class="list-group-item" href="#/">Home <i class="fa fa-chevron-right pull-right"></i></a>
       <a class="list-group-item" href="#/buttons">Buttons <i class="fa fa-chevron-right pull-right"></i></a>
+      <a class="list-group-item" href="#/readme">README <i class="fa fa-chevron-right pull-right"></i></a>
     </div>
 
   </div>
